<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cons">

        <include layout="@layout/parent_backbutton"> </include>
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="45dp"
        android:layout_height="52dp"

        android:layout_marginEnd="8dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cons"
        app:srcCompat="@drawable/steptwo" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="264dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/select_a_date_for_your_scheduled_donation"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />


    <TextView
        android:id="@+id/fifth"
        android:layout_width="123dp"
        android:layout_height="100dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:background="#000"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/every_5th"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="@id/tenth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/tenth"
        android:layout_width="123dp"
        android:layout_height="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="#000"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/every_10th"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toEndOf="@+id/fifth"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/fifteenth"
        android:layout_width="123dp"
        android:layout_height="100dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:background="#000"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/every_15th"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="@id/twentieth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fifth" />

    <TextView
        android:id="@+id/twentfifth"
        android:layout_width="123dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:background="#000"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/every_25th"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/thirtieth"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintLeft_toLeftOf="@id/twentieth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fifteenth" />

    <TextView
        android:id="@+id/twentieth"
        android:layout_width="123dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="#000"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/every_20th"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toEndOf="@+id/fifteenth"
        app:layout_constraintTop_toBottomOf="@+id/tenth" />

    <TextView
        android:id="@+id/thirtieth"
        android:layout_width="123dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="#000"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/every_30th"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toEndOf="@+id/fifteenth"
        app:layout_constraintTop_toBottomOf="@+id/twentieth" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="563dp"
        android:alpha="0.5"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="bottom"
        android:text="@string/not_sure_you_can_always_change_this_anytime"
        android:textAlignment="center"
        android:textColor="#000"
        tools:layout_editor_absoluteY="4dp" />

    <TextView
        android:id="@+id/amount_txt"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="TextView"
        android:textColor="#ff473a"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twentfifth" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/amount_chosen"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_txt" />


</android.support.constraint.ConstraintLayout>