<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/headline"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:gravity="top"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <include layout="@layout/parent_menu_buttons" />

    </RelativeLayout>


    <ImageView

        android:id="@+id/imageView6"
        android:layout_width="418dp"
        android:layout_height="8dp"
        android:alpha="0.3"
        android:background="@android:color/transparent"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        android:src="@drawable/horiz"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription,DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />


    <ImageView
        android:id="@+id/lgucalamity2"
        android:layout_width="400dp"
        android:layout_height="119dp"
        android:layout_marginTop="8dp"
        android:paddingTop="@dimen/cardview_compat_inset_shadow"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="ContentDescription,MissingConstraints,VectorDrawableCompat" />

    <TextView
        android:id="@+id/headline_txt"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:layout_marginBottom="356dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/textview"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lgucalamity2"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/locationicon_img"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline_txt"
        app:srcCompat="@drawable/locationicon"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/barangayAffected_text"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="268dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/textview"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/locationicon_img"
        app:layout_constraintTop_toBottomOf="@+id/headline_txt"
        tools:ignore="SmallSp" />


    <ImageView

        android:id="@+id/imageView6"
        android:layout_width="418dp"
        android:layout_height="8dp"
        android:layout_marginTop="8dp"
        android:alpha="0.3"
        android:background="@android:color/transparent"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        android:src="@drawable/horiz"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintTop_toBottomOf="@+id/dateposted_txt"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ContentDescription,DuplicateIds,MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="343dp"
        android:layout_marginTop="8dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/dateposted_txt"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6">

            <TextView
                android:id="@+id/postinfo_txt"
                android:layout_width="293dp"
                android:layout_height="206dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:layout_marginEnd="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="12dp"
                android:background="#181818"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/urgentneedstitle"
                android:textAlignment="center"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/postinfo_txt" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/needsRecycler"
                android:layout_width="256dp"
                android:layout_height="wrap_content"

                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8">


            </android.support.v7.widget.RecyclerView>


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/sendhelp_btn"
        android:layout_width="285dp"
        android:layout_height="34dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#FF473A"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="bottom"
        android:paddingBottom="2dp"
        android:text="@string/sendHelp"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="15dp"
        android:layout_height="10dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationicon_img"
        app:srcCompat="@drawable/clockicon"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/dateposted_txt"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/textview"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/barangayAffected_text"
        tools:ignore="SmallSp" />

</android.support.constraint.ConstraintLayout>